# python-tmx

./: .gitignore  AGENTS.md  LICENSE  README.MD  README.md  TERMINOLOGY.md  a  a.py  conftest.py  progress.md  pyproject.toml  readthedocs.yaml  result.txt  ruff.toml
.github/workflows/: Run-Pytest.yml  Tests.yml  python-app.yml  python-publish.yml
docs/source/: PythonTmx.classes.rst  PythonTmx.core.rst  PythonTmx.elements.rst  PythonTmx.enums.rst  PythonTmx.rst  PythonTmx.utils.rst  conf.py  index.rst  modules.rst
src/: __init__.py  converter.py  converters.py  models.py  utils.py
src/PythonTmx/: __init__.py  classes.py  core.py  enums.py  errors.py  functions.py  main.py  tag_map.py  utils.py  validation.py
src/PythonTmx/classes/: __init__.py  inline.py  structural.py
src/PythonTmx/elements/: __init__.py  header.py  inline.py  map.py  note.py  prop.py  tmx.py  tu.py  tuv.py  ude.py
src/PythonTmx/parser/: lxml.py
src/PythonTmx/parsers/: __init__.py  lxml.py  standard.py  utils.py
src/hypomnema/: __init__.py
src/hypomnema/api/: __init__.py  core.py  helpers.py
src/hypomnema/base/: __init__.py  errors.py  types.py
src/hypomnema/xml/: policy.py  utils.py
src/python_tmx/arrow/: classes.py  conversion.py  converter.py  dicts.py  structs.py
src/python_tmx/arrows/: converters.py  models.py
src/python_tmx/base/: classes.py  errors.py  models.py  types.py
src/python_tmx/tmx/: models.py  parse.py
src/python_tmx/xml/: __init__.py  classes.py  conversion.py  converters.py  policy.py  types.py  utils.py
tests/: conftest.py  strict_backend.py  test_Note.py  test_Prop.py  test_backends.py  test_deserialization.py  test_map.py  test_note.py  test_prop.py  test_roundtrip.py  test_serialization.py
tests/api/: test_core.py  test_helpers.py
tests/base/: faker_provider.py
tests/data/: minimal.tmx  namespaces.tmx  standard.tmx
tests/providers/: arrow_provider.py  attribute_provider.py  base_provider.py  xml_provider.py
tests/test_elements/: test_header.py  test_inline.py  test_map.py  test_note.py  test_prop.py  test_tmx.py  test_tu.py  test_tuv.py  test_ude.py
tests/test_parser/: test_lxml.py  test_standard.py
tests/tmx/: test_header.py  test_note.py  test_parse.py  test_prop.py  test_segmentparts.py  test_tmx.py  test_tu.py  test_tuv.py
tests/utils/: generate_fake_elements.py
tests/xml/: conftest.py  strict_backend.py  test_conformance.py  test_dataclass_to_xml.py  test_utils.py  test_xml_header.py  test_xml_note.py  test_xml_prop.py  test_xml_segment_parts.py  test_xml_tmx.py  test_xml_to_dataclass.py  test_xml_tu.py  test_xml_tuv.py  utils.py  validators.py
tests/xml/backends/: test_backend.py  test_base_backend.py  test_lxml_backend.py  test_standard_backend.py  test_utils.py
tests/xml/deserialization/: test_base_deserializer.py  test_deserialization_handlers.py  test_deserializer.py  test_handlers.py  test_roundtrip.py
tests/xml/serialization/: test_base_serializer.py  test_handlers.py  test_roundtrip.py  test_serialization_handlers.py  test_serializer.py
(+61 files in other folders)
