[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "python-tmx"
version = "0.4"
authors = [{ name = "Enzo Agosta", email = "agosta.enzowork@gmail.com" }]
description = "Python library for manipulating, creating and editing tmx files"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    "lxml>=6.0.2",
    "pytest>=9.0.1",
    "types-lxml>=2025.11.25",
]


[project.urls]
Homepage = "https://github.com/ChonkyYoshi/python-tmx"
Issues = "https://github.com/ChonkyYoshi/python-tmx/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
license-files = []
